--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -1,4 +1,3 @@
-<!-- item_history.xml -->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,21 +19,22 @@
             android:layout_height="200dp"
             android:scaleType="centerCrop"
             android:adjustViewBounds="true"
-            android:src="@drawable/ic_launcher_foreground" />
+            android:src="@drawable/ic_launcher_foreground"
+            android:contentDescription="@string/image_analisis" />
 
         <TextView
             android:id="@+id/resultLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:text="Result Label"
+            android:text="@string/result_label"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/resultScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Confidence Score"
+            android:text="@string/confidence_score"
             android:textSize="14sp"
             android:paddingTop="4dp" />
     </LinearLayout>
