--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,5 +5,6 @@
         android:id="@+id/menu_history"
         android:title="@string/view_history"
         android:icon="@drawable/baseline_history_24"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        />
 </menu>
